--- a/Content/content.css
+++ b/Content/content.css
@@ -8,16 +8,19 @@ span[style*="text-decoration: underline"] {
 
 /* Styles for the injected meanings */
 .wordwise-meaning {
-  color: inherit; /* Use the inherit value to maintain the usual text color */
+  color: inherit; /* Use the inherit value to maintain the same text color as the word */
   font-weight: bold;
-  border-bottom: 2px solid transparent; /* Transparent border to simulate an underline effect */
-  padding: 0 4px;
-  margin: 0 2px;
-  display: inline-block;
+  font-size: 70%; /* Adjust the font size as needed */
+  text-decoration: none; /* Remove the default text underline */
+  padding: 0 2px; /* Adjust padding as needed */
+  margin: 0;
+  display: inline; /* Display as inline to prevent line break */
+  white-space: nowrap; /* Prevent line break */
   transition: border-color 0.3s ease; /* Smooth transition for border color */
 }
 
 /* Hover effect for the injected meanings */
 .wordwise-meaning:hover {
   border-color: #2980b9; /* Darker blue on hover */
+  cursor: pointer; /* Change cursor to pointer on hover */
 }
